--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
+.app-container {
+  display: flex;
+}
+.container {
+  width: auto;
+  display: flex;
+  justify-content: space-around;
+  color: black;
+}
+.tabletag {
+  width: 1250px;
+}
+table {
+  padding: 10px;
+}
+
+th {
+}
+td {
+  color: black;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.btn {
+  width: auto;
+  height: 50px;
+  border: none;
+  outline: none;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: rgb(34, 34, 94);
+  border-radius: 12px;
+  font-weight: bold;
+  font-size: 16px;
+  text-transform: capitalize;
 }
